--- a/orders-service/alembic.ini
+++ b/orders-service/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://artur:artursubd@localhost:5432/orders_service
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@orders-db:5432/orders_db
 
 
 
