--- a/products-service/requirements.txt
+++ b/products-service/requirements.txt
@@ -1,23 +1,21 @@
-aiosqlite==0.21.0
-annotated-doc==0.0.3
+alembic==1.14.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+asyncpg==0.30.0
 bcrypt==3.2.2
-certifi==2025.11.12
 cffi==2.0.0
 click==8.3.0
 colorama==0.4.6
-cryptography==46.0.3
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.121.1
 greenlet==3.2.4
 h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
 idna==3.11
-jwt==1.4.0
+Mako==1.3.10
+MarkupSafe==3.0.3
 passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.23
