env.docker and env.local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
   users-db:
     image: postgres:15-alpine
     restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: users_db
+    env_file:
+      - ./users-service/.env.docker
     volumes:
       - users-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -19,10 +17,8 @@ services:
   products-db:
     image: postgres:15-alpine
     restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: products_db
+    env_file:
+      - ./products-service/.env.docker
     volumes:
       - products-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -34,10 +30,8 @@ services:
   cart-db:
     image: postgres:15-alpine
     restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: cart_db
+    env_file:
+      - ./cart-service/.env.docker
     volumes:
       - cart-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -49,10 +43,8 @@ services:
   orders-db:
     image: postgres:15-alpine
     restart: unless-stopped
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: orders_db
+    env_file:
+      - ./orders-service/.env.docker
     volumes:
       - orders-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -65,7 +57,7 @@ services:
   users-service:
     build: ./users-service
     env_file:
-      - ./users-service/.env
+      - ./users-service/.env.docker
     depends_on:
       users-db:
         condition: service_healthy
@@ -75,7 +67,7 @@ services:
   products-service:
     build: ./products-service
     env_file:
-      - ./products-service/.env          # теперь через .env файл
+      - ./products-service/.env.docker
     depends_on:
       products-db:
         condition: service_healthy
@@ -85,7 +77,7 @@ services:
   cart-service:
     build: ./cart-service
     env_file:
-      - ./cart-service/.env
+      - ./cart-service/.env.docker
     depends_on:
       cart-db:
         condition: service_healthy
@@ -95,7 +87,7 @@ services:
   orders-service:
     build: ./orders-service
     env_file:
-      - ./orders-service/.env
+      - ./orders-service/.env.docker
     depends_on:
       orders-db:
         condition: service_healthy
