--- a/products-service/Dockerfile
+++ b/products-service/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.12-slim
+FROM python:3.12-slim-bookworm
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=off \
     PIP_DISABLE_PIP_VERSION_CHECK=on
 
+ENV ENV=docker
 WORKDIR /app
 
 # Системные зависимости
